# cookiecutter-python-project

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml.txt  README.md  pyproject.toml
